Reduced navbar padding and fixed it not collapsing when shrunk

--- a/Mafia.NET.Web/wwwroot/css/site.css
+++ b/Mafia.NET.Web/wwwroot/css/site.css
@@ -277,3 +277,7 @@ li.disabled a {
 .catalog-role {
   padding: 0.5rem;
 }
+
+.navbar-mafia {
+  padding: 0.5rem;
+}
